--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+/*
+    Only do media query 320 and full screen and home page
+    No need for forms
+*/
+
 :root {
     /** colours **/
     --yellow:           #FED766; 
@@ -19,4 +24,24 @@
     width: 0.1rem;
     height: 0.1rem;
     visibility: hidden;
+}
+
+
+/* UNIVERSAL */
+body {
+    font-family: 'Rubik', sans-serif;
+}
+
+div .search img {
+    width: 25px;
+}
+
+h1,
+h2,
+h3 {
+    font-family: 'Monoton', cursive;
+}
+
+.container {
+    padding: 0 1rem;
 }
