--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,10 @@
 
 /* UNIVERSAL */
 
+a {
+    text-decoration: none;
+}
+
 a img,
 div .search img,
 .social-media-copyright img {
@@ -43,6 +47,15 @@ body {
 h1,
 h2 {
     font-family: 'Monoton', cursive;
+    font-weight: normal;
+}
+
+h1 {
+    color: var(--lt-seafoam-green);
+}
+
+h2 {
+    color: var(--blue-grey)
 }
 
 ul {
@@ -54,23 +67,62 @@ ul li {
 }
 
 .container {
-    padding: 0 1rem;
+}
+
+.header-content p {
+    color: var(--lt-seafoam-green);
 }
 
 .logo {
     width:15rem
 }
 
-.more-buttons {
-    display: flex;
+.more-button {
+    background-color: var(--lt-seafoam-green);
+    text-align: center;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+}
+
+.menu-button:first-of-type {
+    background-color: var(--seafoam-green);
+    color: var(--dk-blue);
+    text-align: center;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+}
+
+.menu-button:nth-of-type(2) {
+    background-image: linear-gradient(to left, var(--seafoam-green), var(--md-blue));
+    border: 0.15rem var(--seafoam-green) solid;
+    color: var(--seafoam-green);
+    text-align: center;
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+}
+
+.nav-wrapper {
+    padding: 0 1rem;
 }
 
 /* Mobile */
+header {
+    padding: 0 1rem;
+    background-image: linear-gradient(to bottom left, var(--seafoam-green), var(--md-blue));
+}
 
+.header-content {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    gap: 2.5rem;
+    padding-bottom: 4rem;
+}
 
 .menu-icon {
     width: 3rem;
 }
+
 
 .nav-menu {
     visibility: hidden;
