--- a/css/styles.css
+++ b/css/styles.css
@@ -44,18 +44,25 @@ body {
     background-color: var(--lt-seafoam-green);
 }
 
-h1,
-h2 {
-    font-family: 'Monoton', cursive;
-    font-weight: normal;
-}
-
 h1 {
     color: var(--lt-seafoam-green);
 }
 
+h1,
+h2,
+h3 {
+    font-family: 'Monoton', cursive;
+    font-weight: normal;
+}
+
 h2 {
-    color: var(--blue-grey)
+    color: var(--blue-grey);
+    text-decoration: underline var(--seafoam-green);
+}
+
+h3 {
+    font-size: 2rem;
+    color: var(--seafoam-green);
 }
 
 ul {
@@ -64,9 +71,6 @@ ul {
 
 ul li {
     list-style: none;
-}
-
-.container {
 }
 
 .header-content p {
@@ -78,18 +82,23 @@ ul li {
 }
 
 .more-button {
+    align-items: center;
     background-color: var(--lt-seafoam-green);
-    text-align: center;
+    border: 0.15rem var(--dk-blue) solid;
     border-radius: 0.25rem;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    margin: 2rem 1rem;
     padding: 0.5rem;
 }
 
 .menu-button:first-of-type {
     background-color: var(--seafoam-green);
-    color: var(--dk-blue);
-    text-align: center;
     border-radius: 0.25rem;
+    color: var(--dk-blue);
     padding: 0.5rem;
+    text-align: center;
 }
 
 .menu-button:nth-of-type(2) {
@@ -103,6 +112,30 @@ ul li {
 
 .nav-wrapper {
     padding: 0 1rem;
+}
+
+
+.what-we-do {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 1rem;
+}
+
+.what-we-do-card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+
+.what-we-do-card p:first-of-type {
+    color: var(--seafoam-green);
+    font-size: 2rem;
+}
+
+.what-we-do img {
+    border-radius: 0.5rem;
 }
 
 /* Mobile */
@@ -128,7 +161,19 @@ header {
 
 .card {
     flex: 0 0 27rem;
-    margin-right: 2rem;
+}
+
+.card:nth-of-type(odd) {
+    background-color: var(--seafoam-green);
+}
+
+.card:nth-of-type(even) {
+    background-color: var(--md-blue);
+    color: var(--lt-seafoam-green)
+}
+
+.card p {
+    padding: 1rem;
 }
 
 .menu-icon {
