--- a/css/styles.css
+++ b/css/styles.css
@@ -34,8 +34,7 @@ a {
 }
 
 a img,
-div .search img,
-.social-media-copyright img {
+div .search img {
     width: 25px;
 }
 
@@ -64,6 +63,7 @@ h3 {
     font-size: 2rem;
     color: var(--seafoam-green);
 }
+
 
 ul {
     padding: 0;
@@ -114,6 +114,19 @@ ul li {
     padding: 0 1rem;
 }
 
+.contact-wrapper {
+    background-color: var(--dk-blue);
+    color: var(--lt-seafoam-green);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+}
+
+.social-media {
+    gap: 1rem;
+    display: flex;
+}
 
 .what-we-do {
     display: flex;
@@ -144,21 +157,6 @@ header {
     background-image: linear-gradient(to bottom left, var(--seafoam-green), var(--md-blue));
 }
 
-.header-content {
-    display: flex;
-    flex-direction: column;
-    font-size: 1.5rem;
-    gap: 2.5rem;
-    padding-bottom: 4rem;
-    margin-bottom: 2rem;
-}
-
-.horizontal-scroll {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow-x: scroll;
-}
-
 .card {
     flex: 0 0 27rem;
 }
@@ -176,6 +174,21 @@ header {
     padding: 1rem;
 }
 
+.header-content {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.5rem;
+    gap: 2.5rem;
+    padding-bottom: 4rem;
+    margin-bottom: 2rem;
+}
+
+.horizontal-scroll {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+}
+
 .menu-icon {
     width: 3rem;
 }
@@ -188,12 +201,13 @@ header {
     left: 0;
 }
 
+.nav-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
 .our-work {
     margin-bottom: 1rem;
     padding: 0 1rem;
 }
 
-.nav-wrapper {
-    display: flex;
-    justify-content: space-between;
-}
