--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,19 @@ ul li {
 
 .footer-wrapper {
     background-color: var(--md-blue);
-    color: var(--lt-seafoam-green)
+    color: var(--lt-seafoam-green);
+}
+
+.footer-wrapper h2 {
+    padding: 0 1rem;
+}
+
+.email-us {
+    padding: 0 1rem;
+}
+
+.header-content {
+    padding-top: 3rem;
 }
 
 .header-content p {
@@ -250,6 +262,13 @@ header {
     margin-bottom: 2rem;
 }
 
+.header-button {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+
 .horizontal-scroll {
     display: flex;
     flex-wrap: nowrap;
@@ -260,6 +279,17 @@ header {
     width: 3rem;
 }
 
+.more-work {
+    align-items: center;
+    background-color: var(--lt-seafoam-green);
+    border: 0.15rem var(--dk-blue) solid;
+    border-radius: 0.25rem;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    margin: 2rem 1rem;
+    padding: 0.5rem;
+}
 
 .nav-menu {
     visibility: hidden;
@@ -281,8 +311,40 @@ header {
 /* Medium */
 
 @media screen and (min-width: 760px) and (max-width:1189px){
-    body {
-        background-color: yellow;
+    .email-input {
+        display: flex;
+    }
+
+    .header-button {
+        flex-direction: unset;
+    }
+
+    .more-button {
+        width:50%;
+    }
+
+    .more-work {
+        width: 50%;
+    }
+
+    .our-offices {
+        flex-direction: unset;
+        justify-content: space-between;
+        margin-bottom: 2rem;
+    }
+
+    .what-we-do-card {
+        flex-direction: unset;
+    }
+
+    .who-we-are-img,
+    .what-we-do-card img{
+        width:250px;
+    }
+
+    .contact-wrapper {
+        flex-direction: unset;
+        justify-content: space-between;
     }
 }
 
@@ -291,4 +353,5 @@ header {
     body {
         background-color: black;
     }
+
 }
